k8s/kubesphere/kubesphere-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: ks-console-ingress
  name: ks-console-ingress
  namespace: kubesphere-system
spec:
  ingressClassName: nginx
  rules:
    - host: "demo.apps.mlopshub.com"
      http:
        paths:
          - backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
            path: "/"
            pathType: Prefix
